--- a/my-app-frontend/src/App.css
+++ b/my-app-frontend/src/App.css
@@ -69,6 +69,35 @@ ul {
     z-index: -1;
 }
 
+.logo {
+    display: flex;
+    align-items: center;
+    margin-left: 2rem;
+  }
+  
+  .logo img {
+    width: 165px;
+    height: 75px;
+    object-fit: cover;
+    object-position: top;
+    overflow: hidden;
+  }
+
+  .cartlogo {
+    margin-right: 2rem;
+  }
+
+#searchbar{
+    margin-left: 50%;
+    margin-right: auto;
+}
+
+.buttons{
+    padding: 0.25rem;
+    margin-top:1rem;
+    margin-left:1rem;
+}
+
 
 
 
