--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
 .recipe{
     display: flexbox;
     width: 200px;
-    height:250px;
+    height: 300px;
     float:left;
     margin:1rem;
     padding:1rem;
@@ -31,6 +31,31 @@
     border-color: rgb(86, 109, 8);
     background-color: rgb(234, 234, 234);
     margin-left: 2rem;
+}
+
+.single-recipe{
+    display: flexbox;
+    width: 500px;
+    height: 500px;
+    float:left;
+    margin:1rem;
+    padding:1rem;
+    border-style: ridge;
+    border-color: rgb(86, 109, 8);
+    background-color: rgb(234, 234, 234);
+    /* margin-left: auto; */
+    /* margin-right: auto; */
+    justify-content: center;
+}
+
+.single-recipe > figcaption{
+    text-align: center;
+    font-size: 20px;
+}
+
+.single-recipe>img{
+    width: 475px;
+    margin-left: 1rem;
 }
 
 .cart-recipe{
@@ -52,7 +77,7 @@
 }
 
 .recipe > figcaption{
-    padding-left: 3rem;
+    text-align: center;
 }
 .cart-recipe > img{
     height:175px;
@@ -133,7 +158,7 @@ ul {
     box-shadow: 0px 0px 8px 5px white;
 }
 
-.cart-list{
+/* .cart-list{
     list-style-type:none;
     display:flexbox;
     flex-direction: column;
@@ -141,7 +166,7 @@ ul {
     font-family: Helvetica;
     font-size: 25px;
     color:rgb(121, 13, 13);
-}
+} */
 
 
 
@@ -150,16 +175,39 @@ ul {
 }
 
 #cart{
-    display:flexbox;
+    display: flex;
     flex-direction: column;
     float:left;
 }
 
-/* .cart-recipe{
-    display:flexbox;
-    float:left;
+#ingredients{
+    background-color: white;
+    text-align: center;
+    font-size: 20px;
+    margin-left: 65rem;
+    margin-top: 20px;
+    padding: 15px;
+    border-style: groove
 }
-.cart-ingredients{
-    display:flexbox;
-    float:right;
-} */
+
+#instructions{
+    background-color: white;
+    margin-top: 20px;
+    border-style: groove;
+    max-width: 50%;
+    margin-left: 45rem;
+    padding: 15px;
+}
+#instructions>h4{
+    text-align: center;
+}
+
+#cart-ingredients{
+    font size: 20px;
+    border-style: groove;
+    background-color: white;
+    max-width: 35%;
+    text-align: center;
+    margin-left: 30%;
+    margin-right: 25%;
+}
