--- a/src/App.css
+++ b/src/App.css
@@ -203,7 +203,7 @@ ul {
 }
 
 #cart-ingredients{
-    font size: 20px;
+    font-size: 20px;
     border-style: groove;
     background-color: white;
     max-width: 35%;
